--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -12,8 +12,6 @@
             <nav>
                 <h1>Dominik Strykowski</h1>
                 <ul>
-                    <li><a href="#">Work</a></li>
-                    <li>&#8226;</li>
                     <li><a href="#">About</a></li>
                     <li>&#8226;</li>
                     <li><a href="mailto:hello@dominikstrykowski.com">hello@dominikstrykowski.com</a></li>
@@ -50,7 +48,7 @@
                     <div class="study">
                         <img src="img/feather_dribbble.svg" alt="#" class="study-icon">
                         <h2>Portfolio</h2>
-                        <p>I'm not allowed to share most of my work, but anything I can show is right here. Mobile and web projects mainly.</p>
+                        <p>I'm not allowed to share most of my work, but anything I can show is right here. Lorem ipsum later</p>
                         <div class="button-text">
                             dribbble.com &rarr;
                         </div>
@@ -59,7 +57,7 @@
                     <div class="study">
                         <img src="img/feather_briefcase.svg" alt="#" class="study-icon">
                         <h2>Outliant</h2>
-                        <p>My current work place and a full-time job, where I design user interfaces and help design team</p>
+                        <p>My current full-time job, where I design user interfaces and Lorem ipsum later</p>
                         <div class="button-text">
                             outliant.com &rarr;
                         </div>
