--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -33,7 +33,7 @@
                         I bring a fresh perspective and creative problem-solving approach to create products and experiences people love to use. My projects exhibit elements of minimalism and clean design. I am passionate about interfaces and UI/UX in general.
                     </p>
                     <div class="button-text">
-                        Read More &rarr;
+                        <a href="dominikstrykowski.com/About">Read More &rarr;</a>
                     </div>
                 </div>
                 <div class="photo">
@@ -50,7 +50,7 @@
                         <h2>Portfolio</h2>
                         <p>I'm not allowed to share most of my work, but anything I can show is right here. Lorem ipsum later</p>
                         <div class="button-text">
-                            dribbble.com &rarr;
+                            <a href="https://dribbble.com/DominikStrykowski">dribbble.com &rarr;</a>
                         </div>
                     </div>
 
@@ -59,7 +59,7 @@
                         <h2>Outliant</h2>
                         <p>My current full-time job, where I design user interfaces and Lorem ipsum later</p>
                         <div class="button-text">
-                            outliant.com &rarr;
+                            <a href="https://www.outliant.com/">outliant.com &rarr;</a>
                         </div>
                     </div>
 
@@ -68,7 +68,7 @@
                         <h2>Oriliving</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vel ante volutpat nunc tincidunt duis aliquam diam vestibulum.</p>
                     <div class="button-text">
-                        oriliving.com &rarr;
+                        <a href="https://oriliving.com/our-products/">oriliving.com &rarr;</a>
                     </div>    
                 </div>
 
@@ -77,7 +77,7 @@
                         <h2>The Aircrew</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vel ante volutpat nunc tincidunt duis aliquam diam vestibulum.</p>
                     <div class="button-text">
-                        Case Study &rarr;
+                        <a href="#">Case Study &rarr;</a>
                     </div>
                     </div>
 
@@ -86,7 +86,7 @@
                         <h2>Semester</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vel ante volutpat nunc tincidunt duis aliquam diam vestibulum.</p>
                     <div class="button-text">
-                        Case Study &rarr;
+                        <a href="https://www.behance.net/gallery/91675287/Semester-Student-planer">Case Study &rarr;</a>
                     </div>
                     </div>
                 </div>
@@ -94,24 +94,24 @@
 
             <div class="cta-section">
                 <h1>Let's Create Something Together!</h1>
-                <h3>hello@dominikstrykowski.com &rarr;</h3>
+                <h3><a href="mailto:hello@dominikstrykowski.com">hello@dominikstrykowski.com &rarr;</a></h3>
             </div>
 
             <footer>
                 <div class="social">
                     <h3>Social</h3>
                     <ul>
-                        <li>Dribbble</li>
-                        <li>Behance</li>
-                        <li>Instagram</li>
-                        <li>Twitter</li>
+                        <li><a href="https://dribbble.com/DominikStrykowski">Dribbble</a></li>
+                        <li><a href="https://www.behance.net/dominikstrykowski">Behance</a></li>
+                        <li><a href="https://www.instagram.com/dominikstrykowski/">Instagram</a></li>
+                        <li><a href="https://twitter.com/stryk0wski">Twitter</a></li>
                     </ul>
                 </div>
                 <div class="formal">
                     <h3>Formal</h3>
                     <ul>
-                        <li>LinkedIn</li>
-                        <li>Resume / CV</li>
+                        <li><a href="https://www.linkedin.com/in/dominikstrykowski/">LinkedIn</a></li>
+                        <li><a href="#">Resume / CV</a></li>
                     </ul>
                 </div>
                 <div class="contact">
